--- a/css/estiloindex.css
+++ b/css/estiloindex.css
@@ -2,7 +2,7 @@
     border: double;
     text-shadow: white 0px 0px 18px;
     background-color: #7FFFD4;
-    width: 1270px;
+    width: 100%;
     height: 70px;
     margin: 1px;
     margin-left: 1px;
@@ -37,7 +37,7 @@ a:hover, a:active{
     width: 250px;
     border-radius: 400px;
     display: inline-block;
-    float: left;
+    float:left;
 }.fotos1 img{
     margin-top: 100px;
     margin-left: 15%;
