Adição de outras tabelas em outros arquivos.

--- a/css/estilooutros.css
+++ b/css/estilooutros.css
@@ -1,3 +1,43 @@
-body{
-    background-color: royalblue;
+#menu{
+    border: double;
+    text-shadow: white 0px 0px 18px;
+    background-color: #7FFFD4;
+    width: 100%;
+    height: 70px;
+    margin: 1px;
+    margin-left: 1px;
+}a:link, a:visited{
+    font-size: 20px;
+    text-decoration: none;
+    color: rgb(0,0,0);
+    transition-duration: 0.5s;
+    cursor: pointer;
+    }
+a:hover, a:active{
+    color: white;
+}h2{
+    text-align: center;
+}footer p{
+    text-align: center;
+    color: white;
+    background-color: #000;
+    align-self: center;
+    font-family: monospace;
+}.gradient{
+    margin: 1px;
+    border: double;
+    border-width: 100%;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(45deg, #E0FFFF, #B0E0E6, #E0FFFF, 	#F0FFF0, #F5FFFA );
+    background-size: 10000% 10000%;
+    animation: colors 13s alternate infinite;
+}@keyframes colors{
+    0%{
+        background-position: 0% 50%;
+    }50%{
+        background-position: 100% 50%;
+    }100%{
+        background-position: 0% 50%;
+    }
 }
