--- a/css/estilooutros.css
+++ b/css/estilooutros.css
@@ -1,5 +1,4 @@
 #menu{
-    border: double;
     text-shadow: white 0px 0px 18px;
     background-color: #7FFFD4;
     width: 100%;
@@ -17,15 +16,8 @@ a:hover, a:active{
     color: white;
 }h2{
     text-align: center;
-}footer p{
-    text-align: center;
-    color: white;
-    background-color: #000;
-    align-self: center;
-    font-family: monospace;
 }.gradient{
     margin: 1px;
-    border: double;
     border-width: 100%;
     align-items: center;
     justify-content: center;
@@ -40,4 +32,14 @@ a:hover, a:active{
     }100%{
         background-position: 0% 50%;
     }
+}#fotodevsis img{
+    margin-top: 30px;
+    width: 100%;
+}footer #rodape{
+    position: absolute;
+    bottom: 0;
+    background-color: #000;
+    color: white;
+    width: 100%;
+    text-align: center;
 }
