--- a/css/estiloindex.css
+++ b/css/estiloindex.css
@@ -6,6 +6,7 @@
     height: 70px;
     margin: 1px;
     margin-left: 1px;
+
 }a:link, a:visited{
     font-size: 20px;
     text-decoration: none;
@@ -49,25 +50,42 @@
     .column{
         width: 100%;
     }
-}.info{
-    width: 100%;
-    height: 70px;
-}#info{
+}.info li{
+    list-style-type: none;
     margin-left: 22%;
+    display: inline-block;
     background: none;
-    float: left;
-}footer p{
+    font-family: monospace;
+}.info #infodan{
+    margin-left: 19.5%;
+}.info #infothay{
+    margin-left: 43.5%;
+}.redes ul{
+    list-style-type: none;
+    display: inline-block;
+}.redes #redesdan{
+    margin-top: 10px;
+    width: 40px;
+    height: 30px;
+}#danilo{
+    margin-left: 10%;
+}#thay{
+    margin-left: 40%;
+}.redes img{
+    width: 40px;
+    height: 30px;
+}.align, .change{
+    display: flex;
+    align-items: center;
+}.separacaofoto{
+    padding-right: 10px;
+}footer{
+    width: 100%;
+    position: fixed;
+    bottom: 0;
     text-align: center;
     color: white;
     background-color: #000;
     align-self: center;
     font-family: monospace;
 }
-/* #redes{
-    margin-left: 5%;
-    width: 3%;
-    height: 30px;
-    border-radius: 100px;
-}.redes br{
-
-} */
