--- a/css/estilooutros.css
+++ b/css/estilooutros.css
@@ -1,4 +1,5 @@
 #menu{
+    border: double;
     text-shadow: white 0px 0px 18px;
     background-color: #7FFFD4;
     width: 100%;
@@ -8,13 +9,14 @@
 }a:link, a:visited{
     font-size: 20px;
     text-decoration: none;
-    color: rgb(0,0,0);
+    color: #000;
     transition-duration: 0.5s;
     cursor: pointer;
     }
 a:hover, a:active{
     color: white;
-}h2{
+}
+h2{
     text-align: center;
 }.gradient{
     margin: 1px;
@@ -36,10 +38,14 @@ a:hover, a:active{
     margin-top: 30px;
     width: 100%;
 }footer #rodape{
-    position: absolute;
+    margin-top: 100px;
     bottom: 0;
     background-color: #000;
     color: white;
     width: 100%;
     text-align: center;
+}footer u{
+    color: white;
+}#listas{
+    margin-left: 20px;
 }
